# conflow

./: .coveragerc  .gitignore  .travis.yml  LICENSE  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements-lint.txt  requirements-static.txt  requirements-tests.txt  setup.cfg  setup.py
conflow/: __init__.py  dispatcher.py  layer.py  manager.py  merge.py  node.py  policy.py
conflow/from_implementations/: __init__.py  base.py  base_implementation.py  environment.py  yml.py
conflow/froms/: __init__.py  base.py  environment.py  yml.py
examples/: base.py
examples/config/: develop.yaml
src/conflow/: dispatcher.py  layer.py  manager.py  merge.py  node.py  policy.py  protocols.py
tests/: conftest.py
tests/unit/: confignode_test.py  dispatch_test.py  node_test.py
tests/unit/from_implementations/: environment_test.py  test_environment.py  yaml_test.py
tests/unit/manager/: config_test.py  flatten_test.py
tests/unit/merge/: layer_test.py  merge_test.py
tests/unit/tree/: factory_test.py  list_test.py  map_test.py  node_test.py
