[tool.poetry]
name = "conflow"
version = "0.0.2"
description = "Python configuration manager."

license = "MIT"

authors = [
    "Belousow Makc <lib.bmw@gmail.com>",
    "Ermilov Andrey <andrerm@ya.ru>",
]

readme = "README.rst"

repository = "https://github.com/singulared/conflow"
homepage = "https://github.com/singulared/conflow"

keywords = ["development", "configuration", "management"]
classifiers = [
    "Topic :: Software Development :: Libraries"
]

packages = [
    { include = "conflow" },
]

[tool.poetry.dependencies]
python = "^3.6"  # Compatible python versions must be declared here
PyYAML = "^5.1"
typing_extensions = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.1.3"
pytest-cov = "^2.8.1"
pytest-sugar = "^0.9.2"
mypy = "0.730"
lxml = "^4.4.1"
flake8 = "^3.7.8"
flake8-html = "^0.4.0"
mock = "^3.0.5"
ipdb = "^0.12.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
