[metadata]
name = conflow
author = Belousov Makc
author_email = m.belousov@ramber-co.ru
description = Configuration manager
long_description = file: README.rst
keywords = development, configuration, config
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir = 
     = src

[options.package_data]
'' = *.html

[options.packages.find]
where = src
exclude =
    *.tests    
    tests

[tool:pytest]
testpaths = tests/
addopts = --cov=src/conflow --cov-report html:ci/reports/coverage --cov-report term
